# aldrax

./: .env.example  .gitignore  README.md  cache.py  compose.yaml  config.yaml  pyproject.toml  semantic.py
config/: config.py
databases/: company.db
exports/: exports.py
frontend/: bun.lockb  package.json
frontend/src/app/: layout.tsx
frontend/src/app/components/: Chat.tsx  RenderConversation.tsx  TableView.tsx
frontend/src/app/components/ConnectionSettings/: ConnectionSettings.tsx
frontend/src/constants/types/: type.dashboard.ts
frontend/src/lib/conversation/: conversationSlice.ts
misc/: db_to_sqlite.py  upsert_to_vector_db.py
src/: main.py
src/application/web/controllers/: data_points_controller.py  query_controller.py
src/constants/prompts/: prompts.py
src/infastructure/repositories/: openai_repository.py  redis_repository.py  sqlite_query_repository.py  vector_db_repository.py
src/internal/entities/: router_models.py
src/internal/interfaces/services/: query_interface.py
src/internal/use_cases/: query_service.py
